# everything-agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  config.loopback.yaml  config.reachy.yaml  config.yaml  pyproject.toml  requirements.txt
deploy/: README.md  everything-agent.service  install_service.sh  kid-buddy.service
docs/: architecture.html  diagram.html  reference.md  wakeword.md
everything_agent/: __init__.py  __main__.py  agent.py  persona.py
everything_agent/brain/agent/: __init__.py  claude_sdk.py  fast.py  haiku.py  mock.py
everything_agent/brain/router/: __init__.py  anthropic.py  mock.py
everything_agent/core/: approval.py  context.py  module.py  plugins.py  ports.py  registry.py
everything_agent/expressing/tts/: __init__.py  cartesia.py  mock.py
everything_agent/hearing/stt/: __init__.py  cartesia.py  mock.py
everything_agent/hearing/wakeword/: __init__.py  mock.py  openwakeword.py
everything_agent/memory/: __init__.py  none.py  simple.py
everything_agent/modules/emotions/: emotions.py
everything_agent/modules/idle/: idle.py
everything_agent/modules/system_time/: system_time.py
everything_agent/modules/timers/: timers.py
everything_agent/modules/weather/: weather.py
everything_agent/modules/web_search/: web_search.py
everything_agent/providers/: cartesia.py
everything_agent/robot/: __init__.py  loopback.py  mock.py  reachy_mini.py
everything_agent/web/: server.py
reachy_gemini/: __init__.py  __main__.py  app.py  body.py  brain.py  config.py  events.py  expressions.py  memory.py  reachy_app.py  session.py  stt.py  tools.py  tts.py  wake.py  webview.py
scripts/: bargein_echo_probe.py  bargein_test.py  bargein_transcript_test.py  converse.py  e2e_voice.py  kid_buddy.py  mine_youtube_whisper.py  run_on_robot.sh  selftest_robot.py  stress_test.py  voice_roundtrip.py  web_smoketest.py
wakeword_training/: RECORDING_GUIDE.md  run_training.sh
wakeword_training/upload/: run_training.sh
