[project]
name = "reachy-gemini"
version = "0.1.0"
description = "A tiny full-duplex voice agent: your voice <-> Gemini Live <-> a Reachy Mini robot."
requires-python = ">=3.10"
dependencies = [
    "google-genai>=2.8.0",
    "numpy>=1.26",
    "PyYAML>=6",
]

[project.optional-dependencies]
laptop = ["sounddevice>=0.4.6"]   # mic/speaker on a dev machine

[project.scripts]
reachy-gemini = "reachy_gemini.__main__:main"

# Discovered + launched by the Reachy Mini daemon's AppManager.
[project.entry-points."reachy_mini_apps"]
gemini = "reachy_gemini.reachy_app:GeminiApp"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["reachy_gemini"]
